--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,11 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # My config git ignore
-Web.config
+/Web.config
 bin/HoiTroWebsite.dll
 bin/HoiTroWebsite.dll.config
 bin/HoiTroWebsite.pdb
+bin/*
 
 # User-specific files
 *.rsuser
