--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 # My config git ignore
-/Web.config
+Web.config
 bin/HoiTroWebsite.dll
 bin/HoiTroWebsite.dll.config
 bin/HoiTroWebsite.pdb
 bin/*
+# sangvovan.txt
 
 # User-specific files
 *.rsuser
