--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ bin/HoiTroWebsite.dll
 bin/HoiTroWebsite.dll.config
 bin/HoiTroWebsite.pdb
 bin/*
-# sangvovan.txt
+sangvovan.txt
 
 # User-specific files
 *.rsuser
