--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\HomePageController .cs" />
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\NavigationController.cs" />
@@ -216,6 +217,7 @@
     <Content Include="Content\css\owl.carousel.min.css" />
     <Content Include="Content\css\responsive.css" />
     <Content Include="Content\css\slick.css" />
+    <Content Include="Content\css\style_dangtin.css" />
     <Content Include="Content\css\style.css" />
     <Content Include="Content\images\about.png" />
     <Content Include="Content\images\banner1.jpg" />
@@ -371,6 +373,7 @@
     <Content Include="Views\News\NewsDetail.cshtml" />
     <Content Include="Views\RoomInfo\RoomDetail.cshtml" />
     <Content Include="Views\RoomInfo\Index.cshtml" />
+    <Content Include="Views\Post\getPost.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
