--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -128,6 +128,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\MainPartialController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\HomePageController .cs" />
     <Compile Include="Controllers\DefaultController.cs" />
@@ -212,13 +213,14 @@
     <Content Include="Content\css\jquery.fancybox.min.css" />
     <Content Include="Content\css\jquery.mCustomScrollbar.min.css" />
     <Content Include="Content\css\meanmenu.css" />
+    <Content Include="Content\css\my-css.css" />
     <Content Include="Content\css\nice-select.css" />
     <Content Include="Content\css\normalize.css" />
     <Content Include="Content\css\owl.carousel.min.css" />
     <Content Include="Content\css\responsive.css" />
     <Content Include="Content\css\slick.css" />
-    <Content Include="Content\css\style_dangtin.css" />
     <Content Include="Content\css\style.css" />
+    <Content Include="Content\css\style_dangtin.css" />
     <Content Include="Content\images\about.png" />
     <Content Include="Content\images\banner1.jpg" />
     <Content Include="Content\images\banner2.jpg" />
@@ -374,6 +376,7 @@
     <Content Include="Views\RoomInfo\RoomDetail.cshtml" />
     <Content Include="Views\RoomInfo\Index.cshtml" />
     <Content Include="Views\Post\getPost.cshtml" />
+    <Content Include="Views\MainPartial\GetMenuBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
