--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -219,7 +219,7 @@
     <Content Include="Content\css\owl.carousel.min.css" />
     <Content Include="Content\css\responsive.css" />
     <Content Include="Content\css\slick.css" />
-    <Content Include="Content\css\style.css" />
+    <Content Include="Content\css\style_config.css" />
     <Content Include="Content\css\style_dangtin.css" />
     <Content Include="Content\images\about.png" />
     <Content Include="Content\images\banner1.jpg" />
