--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -219,7 +219,7 @@
     <Content Include="Content\css\owl.carousel.min.css" />
     <Content Include="Content\css\responsive.css" />
     <Content Include="Content\css\slick.css" />
-    <Content Include="Content\css\style_config.css" />
+    <Content Include="Content\css\style-config.css" />
     <Content Include="Content\css\style_dangtin.css" />
     <Content Include="Content\images\about.png" />
     <Content Include="Content\images\banner1.jpg" />
@@ -377,6 +377,7 @@
     <Content Include="Views\RoomInfo\Index.cshtml" />
     <Content Include="Views\Post\getPost.cshtml" />
     <Content Include="Views\MainPartial\GetMenuBar.cshtml" />
+    <Content Include="Views\MainPartial\GetSearchBar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
