--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -387,6 +387,7 @@
     <Content Include="Views\MainPartial\GetMenuBar.cshtml" />
     <Content Include="Views\MainPartial\GetSearchBar.cshtml" />
     <Content Include="Views\HomePage\GetRoomType.cshtml" />
+    <Content Include="Views\MainPartial\GetSubMenu.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
