--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -133,8 +133,8 @@
     <Compile Include="Controllers\MainPartialController.cs" />
     <Compile Include="Controllers\HomePageController .cs" />
     <Compile Include="Controllers\NavigationController.cs" />
+    <Compile Include="Controllers\NewsController.cs" />
     <Compile Include="Controllers\RoomInfoController.cs" />
-    <Compile Include="Controllers\NewsController .cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -245,6 +245,8 @@
     <Content Include="Content\images\gallery6.jpg" />
     <Content Include="Content\images\gallery7.jpg" />
     <Content Include="Content\images\gallery8.jpg" />
+    <Content Include="Content\images\hoitro-logo.svg" />
+    <Content Include="Content\images\icons8-zalo-50.svg" />
     <Content Include="Content\images\loading.gif" />
     <Content Include="Content\images\location-icon.svg" />
     <Content Include="Content\images\logo.png" />
@@ -372,7 +374,7 @@
     <Content Include="Views\News\getNews.cshtml" />
     <Content Include="Views\Navigation\getMenu.cshtml" />
     <Content Include="Views\RoomInfo\getInfor.cshtml" />
-    <Content Include="Views\HomePage\getNews.cshtml" />
+    <Content Include="Views\HomePage\GetNews.cshtml" />
     <Content Include="Views\HomePage\GetRoomInfo.cshtml" />
     <Content Include="Views\RoomInfo\getRoomType.cshtml" />
     <Content Include="Views\HomePage\RoomDetail.cshtml" />
@@ -394,6 +396,8 @@
     <Content Include="Views\MainPartial\GetSearchBar.cshtml" />
     <Content Include="Views\HomePage\GetRoomType.cshtml" />
     <Content Include="Views\MainPartial\GetSubMenu.cshtml" />
+    <Content Include="Views\News\GetNewsFollowType.cshtml" />
+    <Content Include="Views\MainPartial\GetLatestRoomList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
