--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -145,6 +145,9 @@
     <Compile Include="Models\Contact.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Mentor.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\Menu.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -228,6 +231,10 @@
     <Content Include="Content\images\about.png" />
     <Content Include="Content\images\acreage-icon.svg" />
     <Content Include="Content\images\arrow-right.svg" />
+    <Content Include="Content\images\avatar1.png" />
+    <Content Include="Content\images\avatar2.png" />
+    <Content Include="Content\images\avatar3.png" />
+    <Content Include="Content\images\avatar4.png" />
     <Content Include="Content\images\banner1.jpg" />
     <Content Include="Content\images\banner2.jpg" />
     <Content Include="Content\images\banner3.jpg" />
@@ -398,6 +405,7 @@
     <Content Include="Views\MainPartial\GetSubMenu.cshtml" />
     <Content Include="Views\News\GetNewsFollowType.cshtml" />
     <Content Include="Views\MainPartial\GetLatestRoomList.cshtml" />
+    <Content Include="Views\MainPartial\GetSupport.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
