--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -190,6 +190,8 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserModels\LoginVM.cs" />
+    <Compile Include="UserModels\RegisterVM.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Content\data\flot-data.js" />
@@ -561,6 +563,7 @@
     <Content Include="Views\Button\listPosted.cshtml" />
     <Content Include="Views\Button\altPhoneNum.cshtml" />
     <Content Include="Views\Button\altPassword.cshtml" />
+    <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
   </ItemGroup>
   <ItemGroup>
