quản lí account

--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -134,9 +134,11 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\AccountsController.cs" />
     <Compile Include="Areas\Admin\Controllers\DefaultController.cs" />
     <Compile Include="Areas\Admin\Controllers\MenusController.cs" />
     <Compile Include="Areas\Admin\Controllers\NewsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\RoomImagesController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoomInfoesController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ButtonController.cs" />
@@ -1596,6 +1598,16 @@
     <Content Include="Areas\Admin\Views\RoomInfoes\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\RoomInfoes\Index.cshtml" />
     <Content Include="Areas\Admin\Views\RoomInfoes\getRoom.cshtml" />
+    <Content Include="Areas\Admin\Views\Accounts\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Accounts\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Accounts\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Accounts\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Accounts\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\RoomImages\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\RoomImages\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\RoomImages\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\RoomImages\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\RoomImages\Index.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
