--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -192,6 +192,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserModels\LoginVM.cs" />
+    <Compile Include="UserModels\PostVM.cs" />
     <Compile Include="UserModels\RegisterVM.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -573,10 +574,12 @@
     <Content Include="Views\Button\altPassword.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
+    <Content Include="Views\User\PostRoom.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Data\10\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
