--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -180,6 +180,9 @@
     <Compile Include="Models\RoomImage.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\RoomImg.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\RoomInfo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -575,6 +578,8 @@
     <Content Include="Views\User\Login.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\User\PostRoom.cshtml" />
+    <Content Include="Views\User\EditPostRoom.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
