--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -136,9 +136,11 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AccountsController.cs" />
     <Compile Include="Areas\Admin\Controllers\DefaultController.cs" />
+    <Compile Include="Areas\Admin\Controllers\MentorsController.cs" />
     <Compile Include="Areas\Admin\Controllers\MenusController.cs" />
     <Compile Include="Areas\Admin\Controllers\NewsController.cs" />
     <Compile Include="Areas\Admin\Controllers\RoomInfoesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SubMenusController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ButtonController.cs" />
     <Compile Include="Controllers\MainPartialController.cs" />
@@ -1602,6 +1604,13 @@
     <Content Include="Areas\Admin\Views\Accounts\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Accounts\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Accounts\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Mentors\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\Mentors\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\Mentors\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\Mentors\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Mentors\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SubMenus\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\SubMenus\Edit.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
@@ -1621,6 +1630,14 @@
     <Content Include="Scripts\js\jquery.mCustomScrollbar.concat.min.js" />
     <Content Include="Scripts\js\jquery.min.js" />
     <Content Include="Scripts\js\jquery.validate.js" />
+    <Content Include="Scripts\js\js-change-image-file.js" />
+    <Content Include="Scripts\js\js-form-submit-data.js" />
+    <Content Include="Scripts\js\js-frm-manage-post.js" />
+    <Content Include="Scripts\js\js-input-value.js" />
+    <Content Include="Scripts\js\js-one-image-inner.js" />
+    <Content Include="Scripts\js\js-one-image-preview.js" />
+    <Content Include="Scripts\js\js-one-image-wrapper.js" />
+    <Content Include="Scripts\js\js-remove-one-image.js" />
     <Content Include="Scripts\js\modernizer.js" />
     <Content Include="Scripts\js\plugin.js" />
     <Content Include="Scripts\js\popper.min.js" />
@@ -1665,20 +1682,6 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Scripts\js\.DS_Store" />
-    <Content Include="Scripts\js\bootstrap.bundle.js.map" />
-    <Content Include="Scripts\js\bootstrap.bundle.min.js.map" />
-    <Content Include="Scripts\js\bootstrap.js.map" />
-    <Content Include="Scripts\js\bootstrap.min.js.map" />
-    <Content Include="Scripts\js\revolution\.DS_Store" />
-    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-strokebb1d.eot" />
-    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-strokebb1d.ttf" />
-    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-strokebb1d.woff" />
-    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-stroked41d.eot" />
-    <Content Include="Scripts\js\revolution\fonts\revicons\revicons90c6.eot" />
-    <Content Include="Scripts\js\revolution\fonts\revicons\revicons90c6.ttf" />
-    <Content Include="Scripts\js\revolution\fonts\revicons\revicons90c6.woff" />
-    <Content Include="Scripts\js\revolution\js\.DS_Store" />
     <Content Include="Views\Shared\_MyLayout.cshtml" />
     <Content Include="Views\Navigation\getMenu.cshtml" />
     <Content Include="Views\RoomInfo\GetListRoomInfo.cshtml" />
@@ -1708,6 +1711,20 @@
     <Content Include="Views\Button\listPosted.cshtml" />
     <Content Include="Views\Button\altPhoneNum.cshtml" />
     <Content Include="Views\Button\altPassword.cshtml" />
+    <Content Include="Scripts\js\.DS_Store" />
+    <Content Include="Scripts\js\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\js\bootstrap.js.map" />
+    <Content Include="Scripts\js\bootstrap.min.js.map" />
+    <Content Include="Scripts\js\revolution\.DS_Store" />
+    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-strokebb1d.eot" />
+    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-strokebb1d.ttf" />
+    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-strokebb1d.woff" />
+    <Content Include="Scripts\js\revolution\fonts\pe-icon-7-stroke\fonts\Pe-icon-7-stroked41d.eot" />
+    <Content Include="Scripts\js\revolution\fonts\revicons\revicons90c6.eot" />
+    <Content Include="Scripts\js\revolution\fonts\revicons\revicons90c6.ttf" />
+    <Content Include="Scripts\js\revolution\fonts\revicons\revicons90c6.woff" />
+    <Content Include="Scripts\js\revolution\js\.DS_Store" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
