--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -1313,6 +1313,7 @@
     <Content Include="Areas\Admin\Content\dist\css\sb-admin-2.min.css" />
     <Content Include="Areas\Admin\Content\dist\js\sb-admin-2.js" />
     <Content Include="Areas\Admin\Content\dist\js\sb-admin-2.min.js" />
+    <Content Include="Areas\Admin\Content\js\jquery-3.6.0.min.js" />
     <Content Include="Areas\Admin\Content\js\sb-admin-2.js" />
     <Content Include="Areas\Admin\Content\vendor\bootstrap-social\bootstrap-social.css" />
     <Content Include="Areas\Admin\Content\vendor\bootstrap\css\bootstrap.css" />
