xủ lý xong banner

--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -1314,11 +1314,15 @@
     <Content Include="Areas\Admin\Content\ckfinder\translations.txt" />
     <Content Include="Areas\Admin\Content\data\flot-data.js" />
     <Content Include="Areas\Admin\Content\data\morris-data.js" />
+    <Content Include="Areas\Admin\Content\dist\css\paging\ligne.css" />
+    <Content Include="Areas\Admin\Content\dist\css\paging\paginate.css" />
     <Content Include="Areas\Admin\Content\dist\css\sb-admin-2.css" />
     <Content Include="Areas\Admin\Content\dist\css\sb-admin-2.min.css" />
     <Content Include="Areas\Admin\Content\dist\js\sb-admin-2.js" />
     <Content Include="Areas\Admin\Content\dist\js\sb-admin-2.min.js" />
     <Content Include="Areas\Admin\Content\js\jquery-3.6.0.min.js" />
+    <Content Include="Areas\Admin\Content\js\paging\paginate.js" />
+    <Content Include="Areas\Admin\Content\js\paging\paginate.min.js" />
     <Content Include="Areas\Admin\Content\js\sb-admin-2.js" />
     <Content Include="Areas\Admin\Content\vendor\bootstrap-social\bootstrap-social.css" />
     <Content Include="Areas\Admin\Content\vendor\bootstrap\css\bootstrap.css" />
