--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -1635,6 +1635,10 @@
     <Content Include="Areas\Admin\Views\Footers\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Footers\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Footers\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SubMenus\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\SubMenus\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\SubMenus\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SubMenus\getSubMenu.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.7.0.js" />
     <Content Include="Scripts\jquery-3.7.0.min.js" />
