--- a/HoiTroWebsite.csproj
+++ b/HoiTroWebsite.csproj
@@ -13811,6 +13811,8 @@
     <Content Include="Models\Model1.edmx.diagram">
       <DependentUpon>Model1.edmx</DependentUpon>
     </Content>
+    <Content Include="Areas\Admin\Views\RoomInfoes\DuyetBai.cshtml" />
+    <Content Include="Areas\Admin\Views\RoomInfoes\GetRoomInfoes.cshtml" />
     <None Include="Scripts\jquery-3.7.0.intellisense.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
